Bug 458133 - PHP Elements occurrence indicator background makes code unreadable in dark theme

--- a/plugins/org.eclipse.php.ui/resources/css/dark/preferencestyle.css
+++ b/plugins/org.eclipse.php.ui/resources/css/dark/preferencestyle.css
@@ -49,3 +49,43 @@ IEclipsePreferences#org-eclipse-php-ui {
         'semanticHighlighting.org.eclipse.php.internal.ui.editor.highlighters.TaskTagHighlighting.bold=true'
         'semanticHighlighting.org.eclipse.php.internal.ui.editor.highlighters.TaskTagHighlighting.color=#9a8c7c'
 }
+
+IEclipsePreferences#org-eclipse-ui-editors:org-eclipse-php-ui {
+  preferences: 
+        'PHPReadOccurrenceIndicationColor=27,98,145'
+        'PHPWriteOccurrenceIndicationColor=27,98,145'
+        'overrideIndicatorColorForPHP=78,120,117'
+        'AbstractTextEditor.Color.Background.SystemDefault=false'
+        'AbstractTextEditor.Color.SelectionForeground.SystemDefault=false'
+        'AbstractTextEditor.Color.SelectionBackground.SystemDefault=false'
+        'AbstractTextEditor.Color.Background=41,41,41'
+        'AbstractTextEditor.Color.Foreground.SystemDefault=false'
+        'AbstractTextEditor.Color.SelectionBackground=27,98,145'
+        'AbstractTextEditor.Color.SelectionForeground=147,161,161'
+        'AbstractTextEditor.Color.Foreground=131,148,150'
+        'AbstractTextEditor.Color.FindScope=30,120,155'
+        'asOccurencesIndicationColor=72,72,72'
+        'breakpointIndicationColor=51,119,193'
+        'currentIPColor=54,54,54'
+        'currentLineColor=19,71,84'
+        'deletionIndicationColor=224,226,228'
+        'filteredSearchResultIndicationColor=27,98,145'
+        'hyperlinkColor=102,175,249'
+        'hyperlinkColor.SystemDefault=false'
+        'infoIndicationColor=86,194,170'
+        'lineNumberColor=101,123,131'
+        'linked.slave.color=66,156,255'
+        'matchingTagIndicationColor=72,72,72'
+        'occurrenceIndicationColor=27,98,145'
+        'overrideIndicatorColor=78,120,117'
+        'printMarginColor=101,123,131'
+        'searchResultHighlighting=false'
+        'searchResultIndication=true'
+        'searchResultIndicationColor=94,94,94'
+        'searchResultTextStyle=BOX'
+        'secondaryIPColor=54,54,54'
+        'spellingIndicationColor=253,170,211'
+        'writeOccurrenceIndicationColor=27,98,145'
+    ;
+}
+
